--- a/index.html
+++ b/index.html
@@ -254,7 +254,33 @@
           </div>
     </div>
     <hr>
-    
+    <div class="section2">
+      <div class="container2" style="margin-left: 40px;" >
+        <div class="field3">
+          <label for="gender" style="margin-right: 140px;">Widow(વિધવા) *</label> <br>   
+          <label><input type="radio" name="gender" /><b>yes</b></label>
+          <label><input type="radio" name="gender" /><b>no</b></label>
+        </div>
+        <div class="field">
+          <label>Widow Certificate No</label> <br />
+          <input type="text" />
+        </div>
+        <div class="field">
+              <label>Widow Certificate Date</label> <br />
+              <input type="date" />
+            </div>
+            <div class="field">
+            <label>Sport Level*</label> <br />
+            <select>
+              <option>Mamalatdar</option>
+              <option>T.D.O (Taluka Developer Officer)</option>
+              <option>Organized by VNSGU</option>
+              <option>Football</option>
+              <option>Tennis</option>
+            </select>
+          </div>
+      </div>
+    </div>
       </div>
     </body>
     </html>
