--- a/index.html
+++ b/index.html
@@ -248,10 +248,6 @@
         <label><input type="checkbox"><b>Orthopedics (OA, OL, BL, OAL)</b></label> <br>
         <label><input type="checkbox"><b>Other</b></label>
       </div>
-      <div class="field-end">
-            <label>Enter % level of PH</label> <br />
-            <input type="text" />
-          </div>
     </div>
     <hr>
     <div class="section2">
@@ -270,7 +266,39 @@
               <input type="date" />
             </div>
             <div class="field">
-            <label>Sport Level*</label> <br />
+            <label>પ્રમાણપત્ર આપનાર સત્ત્તાધિકારી</label> <br />
+            <select>
+              <option>Surat Office</option>
+              <option>Vadodara Office</option>
+              <option>Ahmedabad Office</option>
+              <option>Rajkot Office</option>
+              <option>Gandhinagar Office</option>
+            </select>
+          </div>
+      </div>
+    </div>
+    <hr>
+    <div class="section2">
+      <div class="container2" style="margin-left: 40px;" >
+        <div class="field3">
+          <label for="gender" style="margin-right: 140px;">Ex-Soldier (Army , Navy , Air Force)</label> <br>   
+          <label><input type="radio" name="gender" /><b>yes</b></label>
+          <label><input type="radio" name="gender" /><b>no</b></label>
+        </div>
+        <div class="field">
+          <label>From Date</label> <br />
+          <input type="date" />
+        </div>
+        <div class="field">
+              <label>To Date</label> <br />
+              <input type="date" />
+            </div>
+            <div class="field">
+          <label>ExServicemen Identity No.</label> <br />
+          <input type="text" />
+        </div>
+            <div class="field">
+            <label>માજી સૈનિક ઓળખ કાર્ડ આપનાર સત્ત્તાધિકારી</label> <br />
             <select>
               <option>Mamalatdar</option>
               <option>T.D.O (Taluka Developer Officer)</option>
@@ -281,7 +309,69 @@
           </div>
       </div>
     </div>
+    <hr>
+        <div class="section2">
+      <div class="container2" style="margin-left: 40px;" >
+        <div class="field3">
+          <label for="gender" style="margin-right: 140px;">Currently working as Gujarat State <br>Goverment Employee ?</label> <br>   
+          <label><input type="radio" name="gender" /><b>yes</b></label>
+          <label><input type="radio" name="gender" /><b>no</b></label>
+        </div>
+        <div class="field">
+          <label>Joining Date in Goverment Service</label> <br />
+          <input type="date" />
+        </div>
+            <div class="field" style="margin-right: 290px;" >
+          <label>Name of Department(ખાતાનુ નામ)</label> <br />
+          <input type="text" />
+        </div>
       </div>
+    </div>
+  </div>
+  <hr>
+  <div class="container-end">
+    <div class="lng-title">
+          <h4>Language Details (ભાષાની માહિતી)</h4>
+        </div>
+        <div class="label-header" style="width: 25%; height: 5%; margin-top: 10px; margin-left: 10px;">
+          <label>Language <br> Proficiency</label>
+        </div>
+        <div class="label-main">
+        <div class="label-header">
+          <label>Language</label>
+        </div>
+        <div class="label-header">
+          <label>Read</label>
+        </div>
+        <div class="label-header">
+          <label>Write</label>
+        </div>
+        <div class="label-header">
+          <label>Speak</label>
+        </div>
+      </div>
+      <div class="lang-group">
+        <button style="width: 90px; height: 30px;">English</button>
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+      </div>
+      <div class="lang-group">
+        <button style="width: 90px; height: 30px;">Hindi</button>
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+      </div>
+      <div class="lang-group">
+        <button style="width: 90px; height: 30px;">Gujarati</button>
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+        <input type="checkbox" id="cb-row1">
+      </div>
+  </div>
+  <div class="container-end2">
+    wdfwdf
+  </div>
     </body>
     </html>
     
